messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  selector:
    app: django-messaging
    version: blue  # Initially point to blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
